49
================

11/10/24 Standardise "stop publishing" behaviour, ensure log written
11/10/24 Backend work for enforcing 2FA on all users #1538
11/10/24 Remove mobileapp/login_jsonp as redundant for almost 12 months
11/10/24 When processing payments, load the timezone for timestamping
10/10/24 Add underlines back between people on entry slider #1103
09/10/24 Findpet: Change info header, add option for found listing only
09/10/24 PetRescue: Update breed list + defaults, move to external files
08/10/24 Online forms: mobile font size a bit too large by default
08/10/24 Log weight changes when imported from CSV file
07/10/24 Refactor accounting transactions screen #1103
04/10/24 Prevent extra auditing when deleting already deleted forms
01/10/24 Querybuilder: Bad comparison in additional field between two dates
30/09/24 Set text format for cells correctly when exporting to Excel #1542
30/09/24 Strip extra spaces when validating additional field lookups #1543
28/09/24 When merging people, merge membership number
27/09/24 Fix CHIPMANUFACTURER token breaking with chips containing letters
25/09/24 Search keywords for recently adopted and entered #1526
23/09/24 html_flagged_animals using wrong param name for order
21/09/24 Should not allow litter reference to be changed after creation
19/09/24 Show TNR for released dogs as well as cats #1240
19/09/24 Use stronger random passwords when resetting #1539
18/09/24 FindPet: tweaks based on API responses #1500
18/09/24 Add locale for Saudi Arabia
16/09/24 Publish options: exclude under should only allow integer weeks
16/09/24 ASK/VAR SITE missing from manual, and did not output as criteria
16/09/24 Online form: Set adoptable animal from querystring should set thumbnail
12/09/24 Fix animal type not being set to default by online forms with no type field
11/09/24 Fix saving blank values in publish_options
11/09/24 Fix bad performance clicking adoptable search from home page overview