@@ -69,124 +69,33 @@ $(function() {
             return [
                 html.content_header(_("Change User Settings")),
                 html.warn(_("Your administrator requires all users to enable 2FA below in order to use the system."), "force2fa"),
-                '<table class="asm-table-layout">',
-                '<tr>',
-                    '<td>' + _("Username") + '</td>',
-                    '<td>' + asm.user + '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="realname">' + _("Real name") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<input id="realname" data="realname" class="asm-doubletextbox" />',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="email">' + _("Email Address") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<input id="email" data="email" class="asm-doubletextbox" />',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td></td>',
-                    '<td>',
-                    '<input id="emaildefault" data="emaildefault" class="asm-checkbox" type="checkbox" /> ',
-                    '<label for="emaildefault">' + _("Make this the default reply address when I send email") + '</label>',
-                    '</td>',
-                '</tr>',
-
-                '<tr>',
-                    '<td>',
-                    '<label for="systemtheme">' + _("Visual Theme") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<select id="systemtheme" data="theme" class="asm-selectbox">',
-                    this.theme_list(),
-                    '</select>',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="olocale">' + _("Locale") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<select id="olocale" data="locale" class="asm-doubleselectbox asm-iconselectmenu">',
-                    '<option value="" data-style="background-image: url(static/images/flags/' + config.str("Locale") + '.png)">' + _("(use system)") + '</option>',
-                    this.two_pair_options(controller.locales, true),
-                    '</select>',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="quicklinksid">' + _("Quicklinks") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<select id="quicklinksid" multiple="multiple" class="asm-bsmselect" data="quicklinks">',
-                        this.quicklink_options(),
-                    '</select>',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="shelterview">' + _("Shelter view") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<select id="shelterview" class="asm-selectbox" data="shelterview">',
-                        '<option value="">' + _("(use system)") + '</option>',
-                        html.shelter_view_options(),
-                    '</select>',
-                    '</td>',
-                '</tr>',
-
-                '<tr>',
-                    '<td>',
-                    '<label for="signature">' + _("Signature") + '</label>',
-                    '<button id="button-change" type="button" style="vertical-align: middle">' + _("Clear and sign again") + '</button>',
-                    '</td>',
-                    '<td>',
-                    '<div id="signature" style="width: 500px; height: 200px; display: none"></div>',
-                    '<img id="existingsig" style="display: none; border: 0" />',
-                    '</td>',
-                '</tr>',
-                '<tr>',
-                    '<td>',
-                    '<label for="button-enable2fa">' + _("Two factor authentication (2FA)") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<input id="enabletotp" data="enabletotp" type="hidden" val="0" />',
-                    '<button id="button-enable2fa">' + _("Enable 2FA") + '</button>',
-                    '<button id="button-disable2fa" class="asm-redbutton">' + _("Disable 2FA") + '</button>',
-                    '</td>',
-                '<tr>',
-                '<tr class="enable2fa">',
-                    '<td></td>',
-                    '<td>' + html.info( _("Scan the QR code below with the Google Authenticator app for your mobile device.") ) + '</td>',
-                '</tr>',
-                '<tr class="enable2fa">',
-                    '<td></td>',
-                    '<td><div id="qr2fa" style="padding: 10px; background: #fff; display: inline-block"></div></td>',
-                '</tr>',
-                '<tr class="enable2fa">',
-                    '<td>',
-                    '<label for="twofavalidcode">' + _("Enter the code from your app") + '</label>', 
-                    '</td>',
-                    '<td>',
-                    '<input id="twofavalidcode" type="text" data="twofavalidcode" class="asm-textbox" />',
-                    '</td>',
-                '</tr>',
-                '<tr class="disable2fa">',
-                    '<td>',
-                    '<label for="twofavalidpassword">' + _("Confirm Password") + '</label>',
-                    '</td>',
-                    '<td>',
-                    '<input id="twofavalidpassword" type="password" data="twofavalidpassword" class="asm-textbox" />',
-                    '</td>',
-                '</tr>',
-
-                '</table>',
+                tableform.fields_render([
+                    { label: _("Username"), type: "raw", markup: asm.user },
+                    { post_field: "realname", label: _("Real name"), type: "text", doublesize: true },
+                    { post_field: "email", label: _("Email Address"), type: "text", doublesize: true },
+                    { post_field: "emaildefault", label: _("Make this the default reply address when I send email"), type: "check" },
+                    { post_field: "theme", label: _("Visual Theme"), type: "select", options: change_user_settings.theme_list() },
+                    { post_field: "locale", label: _("Locale"), type: "select", classes: "asm-iconselectmenu", 
+                        options: '<option value="" data-style="background-image: url(static/images/flags/' + config.str("Locale") + '.png)">' + _("(use system)") + '</option>' + 
+                            this.two_pair_options(controller.locales, true) },
+                    { post_field: "quicklinksid", label: _("Quicklinks"), type: "selectmulti", options: change_user_settings.quicklink_options() },
+                    { post_field: "shelterview", label: _("Shelter view"), type: "select", 
+                        options: '<option value="">' + _("(use system)") + '</option>' + html.shelter_view_options() },
+                    { post_field: "signature", type: "raw", label: _("Signature"), 
+                        xlabel: ' <button id="button-change" type="button" style="vertical-align: middle">' + _("Clear and sign again") + '</button>',
+                        markup: '<div id="signature" style="width: 500px; height: 200px; display: none"></div>' +
+                            '<img id="existingsig" style="display: none; border: 0" />' },
+                    { post_field: "button-enable2fa", type: "raw", label: _("Two factor authentication (2FA)"), 
+                        markup: '<input id="enabletotp" data="enabletotp" type="hidden" val="0" />' +
+                            '<button id="button-enable2fa">' + _("Enable 2FA") + '</button>' +
+                            '<button id="button-disable2fa" class="asm-redbutton">' + _("Disable 2FA") + '</button>' },
+                    { rowclasses: "enable2fa", type: "raw", label: "", 
+                        markup: html.info(_("Scan the QR code below with the Google Authenticator app for your mobile device.")) },
+                    { rowclasses: "enable2fa", type: "raw", label: "", 
+                        markup: '<div id="qr2fa" style="padding: 10px; background: #fff; display: inline-block"></div>' },
+                    { rowclasses: "enable2fa", post_field: "twofavalidcode", type: "text", label: _("Enter the code from your app") },
+                    { rowclasses: "disable2fa", post_field: "twofavalidpassword", type: "text", label: _("Confirm Password") }
+                ], { full_width: false }),
                 '<p class="centered">',
                     '<button id="save">' + html.icon("save") + ' ' + _("Save") + '</button>',
                 '</p>',
@@ -241,8 +150,8 @@ $(function() {
 
             // When the visual theme is changed, switch the CSS file and
             // the background.
-            $("#systemtheme").change(function() {
-                let theme = $("#systemtheme").val();
+            $("#theme").change(function() {
+                let theme = $("#theme").val();
                 if (theme == "") { theme = asm.theme; }
                 $.each(controller.themes, function(i, v) {
                     let [tcode, tjq, tbg, tname] = v;
@@ -268,8 +177,8 @@ $(function() {
             }
             $("#realname").val(html.decode(u.REALNAME));
             $("#email").val(u.EMAILADDRESS);
-            $("#olocale").select("value", u.LOCALEOVERRIDE);
-            $("#systemtheme").select("value", u.THEMEOVERRIDE);
+            $("#locale").select("value", u.LOCALEOVERRIDE);
+            $("#theme").select("value", u.THEMEOVERRIDE);
             $("#enabletotp").val(u.ENABLETOTP);
             $(".enable2fa, .disable2fa").hide();
             $("#button-enable2fa").toggle(u.ENABLETOTP == 0);
